добавил макрос экранирования _ и теперь использую всегда \idtf

--- a/chap3.tex
+++ b/chap3.tex
@@ -70,19 +70,19 @@
 
 В качестве программных переменных, которые используются в ходе работы
 алгоритма, я буду использовать sc-переменные. Для указания значения
-sc-переменной используется отношение \rel{значение}.  На рисунке 3.1
-задано значение для sc-переменной \vidtf{beg\_vertex}.
+sc-переменной используется отношение \idtf{значение*}.  На рисунке 3.1
+задано значение для sc-переменной \idtf{_beg_vertex}.
 
 \begin{figure}[h!]
   \centering
   \includegraphics{3/Value_sc_var}
-  \caption{Пример указания значения sc-переменной \vidtf{beg\_vertex}}
+  \caption{Пример указания значения sc-переменной \idtf{_beg_vertex}}
   \label{fig:Value_sc_var}
 \end{figure}
 
 Однако я буду сокращать способ, показанный на
 рис.~\ref{fig:Value_sc_var}, опуская знак отношения
-\rel{значение}. Таким образом, будет использована форма, показанная на
+\idtf{значение*}. Таким образом, будет использована форма, показанная на
 рис.~\ref{fig:Short_value_sc_var}. Имейте в виду, что полученная
 sc-конструкция не является корректной в семантическом смысле, но в
 данном разделе использование именно такой формы позволит сделать
@@ -92,7 +92,7 @@ sc-конструкция не является корректной в сема
   \centering
   \includegraphics{3/Short_value_sc_var}
   \caption{Пример сокращенного указания значения sc-переменной
-    \vidtf{beg\_vertex}}
+    \idtf{_beg_vertex}}
   \label{fig:Short_value_sc_var}
 \end{figure}
 
@@ -141,15 +141,15 @@ sc-конструкция не является корректной в сема
   Переменные изменятся следующим образом:
 
   \begin{itemize}
-  \item \vidtf{graph} получит в качестве значения sc-узел
+  \item \idtf{_graph} получит в качестве значения sc-узел
     неориентированного графа;
-  \item \vidtf{beg\_vertex} получит в качестве
+  \item \idtf{_beg_vertex} получит в качестве
     значения вершину А, которая будет начальной для поиска минимального
     пути;
-  \item \vidtf{end\_vertex} получит в качестве значение вершину $F$,
+  \item \idtf{_end_vertex} получит в качестве значение вершину \idtf{F},
     которая будет конечной для поиска минимального пути.  Таким образом,
     из состояния sc-памяти на этом шаге вам должно быть ясно, что будет
-    производиться поиск минимального пути между вершинами $A$ и $F$.
+    производиться поиск минимального пути между вершинами \idtf{A} и \idtf{F}.
   \end{itemize}
 \end{algostep}
 
@@ -157,9 +157,9 @@ sc-конструкция не является корректной в сема
 \begin{algostep}{Создание множества непроверенных вершин (Шаг
     1)}{S2_Create_unchecked_vertexes_set}{0.8}
 
-  Переменная \vidtf{not\_checked\_vertexes} получит в качестве значения
+  Переменная \idtf{_not_checked_vertexes} получит в качестве значения
   множество непроверенных вершин обрабатываемого графа (в это множество
-  не включена начальная вершина пути $A$).
+  не включена начальная вершина пути \idtf{A}).
 \end{algostep}
 
 
@@ -167,12 +167,12 @@ sc-конструкция не является корректной в сема
     2, 3)}{S3_Create_1st_wave}{0.8}
 
   На этом этапе программа создает первую волну из списка волн. Первая
-  волна содержит только начальную вершину пути $A$. Переменная
-  \vidtf{new\_wave} получает в качестве значения созданную волну, и в
+  волна содержит только начальную вершину пути \idtf{A}. Переменная
+  \idtf{_new_wave} получает в качестве значения созданную волну, и в
   будущем будет всегда указывать на вновь созданную волну.
 
-  Переменная \vidtf{waves\_list\_head} указывает на начальный элемент
-  списка волн, а переменная \vidtf{waves\_list\_tail} сейчас и в
+  Переменная \idtf{_waves_list_head} указывает на начальный элемент
+  списка волн, а переменная \idtf{_waves_list_tail} сейчас и в
   последующих шагах – на концевой элемент списка волн.
 \end{algostep}
 
@@ -181,13 +181,13 @@ sc-конструкция не является корректной в сема
     4)}{S4_Create_next_wave}{0.8}
   
   Для вершин из предыдущей волны являются смежными и входящими во
-  множество проверенных вершин только вершины $B$ и $С$. Из них
+  множество проверенных вершин только вершины \idtf{B} и \idtf{С}. Из них
   формируем новую волну. Обратите внимание на то, что эти вершины
   исключаются из множества непроверенных вершин (см. значение
-  переменной \vidtf{not\_checked\_vertexes}).
+  переменной \idtf{_not_checked_vertexes}).
 
-  Переменная \vidtf{waves\_list\_tail} получает в качестве значения
-  созданный элемент списка, а переменная \vidtf{new\_wave} – созданную
+  Переменная \idtf{_waves_list_tail} получает в качестве значения
+  созданный элемент списка, а переменная \idtf{_new_wave} – созданную
   волну.
 \end{algostep}
 
@@ -196,13 +196,13 @@ sc-конструкция не является корректной в сема
     4)}{S5_Create_next_wave}{0.8}
 
   Для вершин из предыдущей волны является смежной и входящей во
-  множество проверенных вершин только вершина $D$. Из нее формируем
+  множество проверенных вершин только вершина \idtf{D}. Из нее формируем
   новую волну. Обратите внимание на то, что эта вершина исключается из
   множества непроверенных вершин (см. значение переменной
-  \vidtf{not\_checked\_vertexes}).
+  \idtf{_not_checked_vertexes}).
 
-  Переменная \vidtf{waves\_list\_tail} получает в качестве значения
-  созданный элемент списка, а переменная \vidtf{new\_wave} – созданную
+  Переменная \idtf{_waves_list_tail} получает в качестве значения
+  созданный элемент списка, а переменная \idtf{_new_wave} – созданную
   волну.
 \end{algostep}
 
@@ -211,16 +211,16 @@ sc-конструкция не является корректной в сема
     6)}{S6_Create_last_wave}{0.8}
 
   Для вершины из предыдущей волны является смежной и входящей во
-  множество проверенных вершин только вершина $F$. Из нее формируем
+  множество проверенных вершин только вершина \idtf{F}. Из нее формируем
   новую волну. Обратите внимание на то, что эта вершина исключается из
   множества непроверенных вершин (см. значение переменной
-  \vidtf{not\_checked\_vertexes}).
+  \idtf{_not_checked_vertexes}).
 
-  Переменная \vidtf{waves\_list\_tail} получает в качестве значения
-  созданный элемент списка, а переменная \vidtf{new\_wave} – созданную
+  Переменная \idtf{_waves_list_tail} получает в качестве значения
+  созданный элемент списка, а переменная \idtf{_new_wave} – созданную
   волну.
 
-  Так как эта волна содержит конечную вершину пути $F$, то на
+  Так как эта волна содержит конечную вершину пути \idtf{F}, то на
   следующих этапах мы перейдем к генерации одного из найденных
   минимальных путей.
 \end{algostep}
@@ -229,21 +229,20 @@ sc-конструкция не является корректной в сема
 \begin{algostep}{Удаление множества непроверенных
     вершин}{S7_Erase_unchecked_vertexes_set}{0.8}
  
-  Подчистим память, удалив множество непроверенных вершин (значение
-  переменной \vidtf{not\_checked\_vertexes}), так как оно нам уже не
-  надо.
+  Подчистим память, удалив значение переменной
+  \idtf{_not_checked_vertexes}, так как оно нам уже не надо.
 \end{algostep}
 
 
-\begin{algostep}{Создание связки отношения \rel{путь} (Шаг
+\begin{algostep}{Создание связки отношения \idtf{путь*} (Шаг
     8)}{S8_Create_route_tuple}{0.7}
  
   Начинаем генерацию одного из найденных минимальных путей.
 
-  Создадим связку отношения \rel{путь} и установим ее в качестве
-  значения переменной \vidtf{route}. Переменная \vidtf{route\_struct}
+  Создадим связку отношения \idtf{путь*} и установим ее в качестве
+  значения переменной \idtf{_route}. Переменная \idtf{_route_struct}
   получит в качестве значения ориентированный граф структуры пути, а
-  переменная \vidtf{route\_visit} – отношения посещения.
+  переменная \idtf{_route_visit} – отношения посещения.
 \end{algostep}
 
 
@@ -252,20 +251,20 @@ sc-конструкция не является корректной в сема
     8)}{S9_Add_end_vertex_visit_to_route_tuple}{0.7}
  
   Добавим в структуру генерируемого пути посещение конечной вершины
-  $F$. Созданное посещение получит в качестве значения переменная
-  \vidtf{end\_vertex\_visit}.
+  \idtf{F}. Созданное посещение получит в качестве значения переменная
+  \idtf{_end_vertex_visit}.
 \end{algostep}
 
 
 \begin{algostep}{Установка переменных для 1-ой итерации цикла генерации
     структуры пути (Шаг 8)}{S10_Step_building_route_structure}{0.7}
   
-  Структура пути строится, начиная с конечной вершины пути $F$.
+  Структура пути строится, начиная с конечной вершины пути \idtf{F}.
 
-  На этом этапе переменная \vidtf{curr\_vertex} получит в качестве
-  значения текущую обрабатываемую вершину, переменная \vidtf{list\_it}
+  На этом этапе переменная \idtf{_curr_vertex} получит в качестве
+  значения текущую обрабатываемую вершину, переменная \idtf{_list_it}
   – текущий обрабатываемый элемент списка волн, переменная
-  \vidtf{curr\_wave} – текущую обрабатываемую волну.
+  \idtf{_curr_wave} – текущую обрабатываемую волну.
 \end{algostep}
 
 
@@ -273,9 +272,9 @@ sc-конструкция не является корректной в сема
     генерации структуры пути (Шаг
     8)}{S11_Step_building_route_structure_add_visits}{0.7}
  
-  Создадим посещение для одной из вершин из волны \vidtf{curr\_wave},
+  Создадим посещение для одной из вершин из волны \idtf{_curr_wave},
   которая является смежной вершине из переменной
-  \vidtf{curr\_vertex}. Для связывающего их ребра тоже создадим
+  \idtf{_curr_vertex}. Для связывающего их ребра тоже создадим
   посещение.
 \end{algostep}  
 
@@ -283,12 +282,12 @@ sc-конструкция не является корректной в сема
 \begin{algostep}{Переход ко 2-ой итерации цикла генерации структуры
     пути (Шаг 8)}{S12_Step_building_route_structure}{0.7}
  
-  На этом этапе переменная \vidtf{curr\_vertex} получит в качестве
+  На этом этапе переменная \idtf{_curr_vertex} получит в качестве
   значения вершину, для которой было создано посещение на предыдущей
-  итерации. Переменная \vidtf{list\_it} – предшествующей элемент
-  списка волн для значения переменной \vidtf{curr\_wave} на предыдущем
-  этапе. Переменная \vidtf{curr\_wave} – обрабатываемую волну для
-  элемента списка из установленного значения \vidtf{list\_it}.
+  итерации. Переменная \idtf{_list_it} – предшествующей элемент
+  списка волн для значения переменной \idtf{_curr_wave} на предыдущем
+  этапе. Переменная \idtf{_curr_wave} – обрабатываемую волну для
+  элемента списка из установленного значения \idtf{_list_it}.
 \end{algostep}
 
 
@@ -296,9 +295,9 @@ sc-конструкция не является корректной в сема
     генерации структуры пути (Шаг
     8)}{S13_Step_building_route_structure_add_visits}{0.7}
 
-  Создадим посещение для одной из вершин из волны \vidtf{curr\_wave},
+  Создадим посещение для одной из вершин из волны \idtf{_curr_wave},
   которая является смежной вершине из переменной
-  \vidtf{curr\_vertex}. На эту роль была выбрана вершина $С$. Для
+  \idtf{_curr_vertex}. На эту роль была выбрана вершина \idtf{С}. Для
   ребра, связывающего две вершины, тоже создадим посещение.
 \end{algostep}
 
@@ -306,12 +305,12 @@ sc-конструкция не является корректной в сема
 \begin{algostep}{Переход к 3-ей итерации цикла генерации структуры пути
     (Шаг 8)}{S14_Step_building_route_structure}{0.7}
  
-  На этом этапе переменная \vidtf{curr\_vertex} получит в качестве
+  На этом этапе переменная \idtf{_curr_vertex} получит в качестве
   значения вершину, для которой было создано посещение на предыдущей
-  итерации. Переменная \vidtf{list\_it} – предшествующей элемент
-  списка волн для значения переменной \vidtf{curr\_wave} на предыдущем
-  этапе. Переменная \vidtf{curr\_wave} – обрабатываемую волну для
-  элемента списка из установленного значения \vidtf{list\_it}.
+  итерации. Переменная \idtf{_list_it} – предшествующей элемент
+  списка волн для значения переменной \idtf{_curr_wave} на предыдущем
+  этапе. Переменная \idtf{_curr_wave} – обрабатываемую волну для
+  элемента списка из установленного значения \idtf{_list_it}.
 \end{algostep}
 
 
@@ -319,9 +318,9 @@ sc-конструкция не является корректной в сема
     генерации структуры пути (Шаг
     8)}{S15_Step_building_route_structure_add_visits}{0.7}
  
-  Так как для вершины $A$ уже создано посещение, то делать это
+  Так как для вершины \idtf{A} уже создано посещение, то делать это
   повторно алгоритм не будет. А вот посещение ребра между вершинами
-  $A$ и $С$ необходимо создать.
+  \idtf{A} и \idtf{С} необходимо создать.
 
   Структура пути создано, поэтому завершаем цикл и переходим к очистке
   sc-памяти от уже ненужных sc-конструкций.
@@ -329,16 +328,16 @@ sc-конструкция не является корректной в сема
 
 \begin{algostep}{Удаление списка волн}{S16_Erase_waves_list}{0.7}
  
-  Удалим список волн. Переменные \vidtf{list\_it},
-  \vidtf{waves\_list\_head}, \vidtf{curr\_wave},
-  \vidtf{waves\_list\_tail} окажутся без значений.
+  Удалим список волн. Переменные \idtf{_list_it},
+  \idtf{_waves_list_head}, \idtf{_curr_wave},
+  \idtf{_waves_list_tail} окажутся без значений.
 \end{algostep}
 
 
 \begin{algostep}{Результат работы алгоритма}{S17_Result}{0.7}
  
   На данном этапе продемонстрирован результат работы алгоритма,
-  значение переменной \vidtf{route} будет возвращено в вызывающий
+  значение переменной \idtf{_route} будет возвращено в вызывающий
   контекст.
 \end{algostep}
 \end{itemize}
