--- a/algodemo.tex
+++ b/algodemo.tex
@@ -129,8 +129,8 @@ sc-конструкция не является корректной в сема
   \fi
   \addtocounter{algosteps}{1}
 
+  \subsubsection*{\emph{#1}}
   \label{astep:#2}
-  \item \emph{\textbf{#1}}
   
   \begin{figure}[h!]
     \centering
@@ -140,7 +140,6 @@ sc-конструкция не является корректной в сема
 {
 }
 
-\begin{itemize}
 \begin{algostep}{Задание входного графа, начальной и конечной вершины
     пути для работы алгоритма}{S1_Input_graph}{0.8}
   
@@ -346,9 +345,8 @@ sc-конструкция не является корректной в сема
   значение переменной \idtf{_route} будет возвращено в вызывающий
   контекст.
 \end{algostep}
-\end{itemize}
 
 %%% Local Variables: 
 %%% mode: latex
-%%% TeX-master: "main"
+%%% TeX-master: "ai_rr"
 %%% End: 
