--- a/libsc.tex
+++ b/libsc.tex
@@ -1898,5 +1898,5 @@ static void erase(sc_session *s, sc_addr list);
 
 %%% Local Variables: 
 %%% mode: latex
-%%% TeX-master: "main"
+%%% TeX-master: "ai_rr"
 %%% End: 
