--- a/libscalgo.tex
+++ b/libscalgo.tex
@@ -165,5 +165,5 @@ cd %SC_CORE_HOME%\examples\wave_find_path
 
 %%% Local Variables: 
 %%% mode: latex
-%%% TeX-master: "main"
+%%% TeX-master: "ai_rr"
 %%% End: 
