--- a/scpalgo.tex
+++ b/scpalgo.tex
@@ -305,7 +305,7 @@ element <- node;
 записи различных видов sc-дуг на SCs.
 
 Таблица 3.1 Соответствие SCg-изображения sc-дуги записи на SCs
-Изображение на SCg	Запись на SCs (направления слева направо и справа налево)
+Изображение на SCg  Запись на SCs (направления слева направо и справа налево)
 
 
 Предложения на SCs могут иметь еще более сложную структуру, чем было
@@ -346,5 +346,5 @@ node1, node2 -> element1, attr1_: attr2_: element2;
 
 %%% Local Variables: 
 %%% mode: latex
-%%% TeX-master: "main"
+%%% TeX-master: "ai_rr"
 %%% End: 
