--- a/cppalgo.tex
+++ b/cppalgo.tex
@@ -132,35 +132,35 @@ New -> Project. В диалоге <<New Project>> вас будет интере
 \subsection{Тестовые примеры}
 \label{sec:Cppalgo_tests}
 
-1.	graph1.txt
+1.  graph1.txt
 
 \begin{figure}[h!]
   \centering
   \includegraphics{1/test/1}
 \end{figure}
 
-2.	graph2.txt
+2.  graph2.txt
 
 \begin{figure}[h!]
   \centering
   \includegraphics{1/test/2}
 \end{figure}
 
-3.	graph3.txt
+3.  graph3.txt
 
 \begin{figure}[h!]
   \centering
   \includegraphics{1/test/3}
 \end{figure}
  
-4.	graph4.txt
+4.  graph4.txt
 
 \begin{figure}[h!]
   \centering
   \includegraphics{1/test/4}
 \end{figure}
  
-5.	graph5.txt
+5.  graph5.txt
 
 \begin{figure}[h!]
   \centering
@@ -172,5 +172,5 @@ New -> Project. В диалоге <<New Project>> вас будет интере
 
 %%% Local Variables: 
 %%% mode: latex
-%%% TeX-master: "main"
+%%% TeX-master: "ai_rr"
 %%% End: 
